# Docker-101

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/lista/: admin.py  apps.py  models.py  serializers.py  views.py
backend/lista/migrations/: 0001_initial.py
frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: InputBar.vue  ItemList.vue
